--- a/install
+++ b/install
@@ -47,7 +47,7 @@ vim +NeoBundleInstall +q
 git clone https://github.com/seebi/dircolors-solarized ~/Developer/dircolors-solarized
 
 # シンボリックリンク
-ln -sf ~/.dotfiles/.zsh_profile ~/.zsh_profile
+ln -sf ~/.dotfiles/.zshenv ~/.zshenv 
 ln -sf ~/.dotfiles/.vimrc ~/.vimrc
 ln -sf ~/.dotfiles/.gitignore ~/.gitignore
 ln -sf ~/.dotfiles/.gitconfig ~/.gitconfig
